Closed Bug 750334 Opened 14 years ago Closed 14 years ago

rotating image appears too big during transition, then snaps to correct size

Categories

(Core :: Layout, defect)

ARM
Android
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla15
Tracking Status
firefox14 --- verified
firefox15 --- verified
blocking-fennec1.0 --- +

People

(Reporter: blassey, Assigned: mattwoodrow)

References

()

Details

(Keywords: mobile)

Attachments

(3 files)

The site has a section at the top that rotates between 3 photos with a fade transition. During that transition, the images are layed out much too big. Once the transition is complete, they snap to the correct size.
blocking-fennec1.0: ? → +
So this is Fennec, not Mac desktop?
It seems so. It is some problem with how we configure image layers when we optimize thebes layers into image layers. All it takes is an image that has its opacity animated to show the problem.
Maybe related to bug 741173? Though perhaps not, going on Joe's latest comment on that bug.
Ali, can you dupe this if it is a dupe?
Assignee: nobody → ajuma
(In reply to Chris Lord [:cwiiis] from comment #3) > Maybe related to bug 741173? Though perhaps not, going on Joe's latest > comment on that bug. The patch for Bug 728026 fixes Bug 741173 but doesn't fix this bug, so this seems to be a different issue.
saw this on the nytimes this morning
Keywords: mobile
Summary: rotating image on http://rugby.mit.edu/ appears to big during transition, then snaps to correct size → rotating image appears too big during transition, then snaps to correct size
To help debug this, I've made a minimal testcase at http://people.mozilla.org/~ajuma/opacity As noted by tn in Comment 2, all that's needed is an image that has its opacity animated.
(In reply to Robert O'Callahan (:roc) (Mozilla Corporation) from comment #1) > So this is Fennec, not Mac desktop? Yup, sorry. This is Fennec.
OS: Mac OS X → Android
Hardware: x86 → ARM
(In reply to Timothy Nikkel (:tn) from comment #2) > It is some problem with how we configure image layers when we optimize > thebes layers into image layers. Indeed; turning off the thebes layer to image layer optimization prevents the problem.
OS: Android → Mac OS X
Hardware: ARM → x86
OS: Mac OS X → Android
Hardware: x86 → ARM
I think this should fix the problem, can someone try it please :)
Attachment #623848 - Flags: review?(roc)
Yep, that patch fixes it.
Is there a similar code path that might apply to frames of a video (bug 754434)? I can reproduce that bug even with the patch from this build.
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla15
Issue is still reproducible on Aurora 14.0a2 2012-05-17 using http://people.mozilla.org/~ajuma/opacity. Verified fix on: Build: Nightly 15.0a1 2012-05-17 Device: HTC Desire Z OS: Android 2.3.3
Status: RESOLVED → VERIFIED
Should this be uplifted?
(In reply to Kartikaya Gupta (:kats) from comment #20) > Should this be uplifted? Yes. Matt, can you please request approval?
Comment on attachment 623848 [details] [diff] [review] Always apply the scale to image layers [Approval Request Comment] Bug caused by (feature/regressing bug #): Bug 695275 User impact if declined: Misplaced images Testing completed (on m-c, etc.): Landed on m-c for almost a week, verified as fixing the issue. Risk to taking this patch (and alternatives if risky): Very low risk, just changes the scaling applied to images. String or UUID changes made by this patch: None Do we want approval for beta too?
Attachment #623848 - Flags: approval-mozilla-aurora?
Attachment #623848 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [inbound]
Verified fixed on: Nightly 15.0a1 (2012-05-31) Aurora 14.0a2 (2012-05-30) Beta 14.0b4 Samsung Galaxy SII (2.3.4)
(In reply to Matt Woodrow (:mattwoodrow) from comment #22) > Do we want approval for beta too? Yes, we needed to get this into beta :-( to fix bug 735373.
Comment on attachment 623848 [details] [diff] [review] Always apply the scale to image layers Review of attachment 623848 [details] [diff] [review]: ----------------------------------------------------------------- Simple safe patch that fixes regression in bug 735373
Attachment #623848 - Flags: approval-mozilla-beta?
Comment on attachment 623848 [details] [diff] [review] Always apply the scale to image layers Clearing the approval nom - this landed on aurora before migration, and should be uplifted to beta automatically
Attachment #623848 - Flags: approval-mozilla-beta?
Depends on: 767292
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: