bug 750334 - rotating image appears too big during transition, then snaps to correct size r=roc a=blocking-fennec1.0